# RCMDP-Epigraph

./: README.md  algorithm-concept.ipynb  experiments.ipynb  grad-conflict.ipynb  plot-KL-garnet-env.ipynb  plot-all.ipynb  plot-finite-garnet-env.ipynb  plot-finite-random-env.ipynb  plot-finite-streaming-env.ipynb  plot-random-finite-env.ipynb  pyproject.toml  solve-finite-set.ipynb  solve-rcmdp.ipynb
KL/: garnet.py  rcmdp.py
finite/: garnet.py  media-streaming.py  mediast.py  random.py  rcmdp.py  streaming.py
results/KL/: garnet-env-5-3-0.1-1.0-0.99.pkl  garnet-env-5-3-0.2-2.0-0.99.pkl  garnet-env-5-3-1-2.0-0.99.pkl  garnet-env-9-4-2-1.0-0.991.pkl
results/finite/: garnet-env-5-3-2-0.992.pkl  garnet-env-5-3-2-1-0.99.pkl  garnet-env-5-3-4-1-0.99.pkl  garnet-env-7-4-0.1-1-0.99.pkl  garnet-env-7-4-0.1-5-0.995.pkl  garnet-env-7-4-1-1-0.995.pkl  garnet-env-7-4-1-5-0.995.pkl  garnet-env-7-4-2-1-0.995.pkl  garnet-env-7-4-2-5-0.995.pkl  garnet-env-8-5-2-0.992.pkl  garnet-env-9-4-2-0.991.pkl  garnet-env-9-4-2-1-0.991.pkl  garnet-env-9-4-2-2-0.991.pkl  garnet-env.pkl  random-env.pkl  streaming-env.pkl
